@startuml universidade

title Matrícula de Universidade

class Aluno{
    - nome: String
    - cpf: Integer
    - telefone: Integer
    - data_nascimento: date
    - endereco: String
    + construtor (nome, matricula, data_nascimento, endereco)
}

class Disciplina{
    - nome: String
    - semestre: String
    - codigo_disciplina: int
    - carga_horaria: Float
    - descricao: String
    - curso: Curso
    + construtor (nome, semestre, codigo_disciplina, carga_horaria, descricao, curso)
}

class Matricula{
    - codigo_matricula: int
    - tipo: String
    - data: date
    - aluno: aluno
    - disciplina: disciplina
    + construtor (codigo_matricula, tipo, data, aluno, disciplina)
}

class Curso{
    - nome: String  
    - codigo_curso: int
    - formacao: String
    - modalidade: String
    - descricao: String
    + construtor (nome, codigo_curso, formacao, modalidade, descricao)
}


Matricula *-- Aluno
Matricula *-- Disciplina
Disciplina *-- Curso


@enduml
